fix header brand on mobile 320px(iphone SE) show issue

--- a/input/common.css
+++ b/input/common.css
@@ -26,6 +26,10 @@ body{
 			display: inline-block;
 			vertical-align: middle;
 		}
+		img{
+			max-width: 335px;
+			width: 90%;
+		}
 		.contact-us{
 			padding-left: 70px;
 			text-align: left;
